--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/vendors/container.css">
+    <link rel="stylesheet" href="css/vendors/nav.css">
+    <link rel="stylesheet" href="css/vendors/grid_css.css">
     <link rel="stylesheet" href="css/vendors/fonts/font-awesome.min.css">
     <title>F.Pharmecy</title>
 </head>
@@ -33,195 +35,147 @@
         <li><a href="#contact"><span>اتصل بنا</span><span><i class="fa fa-2x fa-envelope"></i></span></a></li>
     </ul>
     <div class="container">
-        <div class="row">
-            <div class="img_col_1"></div>
-        </div>
-        <div class="row" id="Info_home">
-            <div class="col_6 col_12">
-                <div class="img_col_2"></div>
-            </div>
-            <div class="col_6 col_12">
-                <div class="code_grid ">
-                    <p>تسعى كلية الصيدلة إلى إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر
-                        اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة
-                        الإنتاج وصيدلة الخدمات
-                        <br>كما تسعى النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون
-                        مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في
-                        الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع
-                    </p>
-                    <button type="submit" class="btn-more disabled" id="form-submit">اقرأ المزيد</button>
-                </div>
+        <div class="content cont-1" id="img_col_1"></div>
+        <div class="content cont-2" id="Info_home">
+            <div class="code_grid">
+                <div class="main">تسعى كلية الصيدلة إلى إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات</div>
+                <div class="details">كما تسعى النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
+                <div class="btn-more">اقرأ المزيد</div>
             </div>
         </div>
-        <div class="row">
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="icon-more" id="form-submit">
-                        <h3>الرؤية</h3>
-                    </div>
-                    <p style="color:black ;">النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية،
-                        والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور
-                        الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع
-                        <br>تشجيع مختلف النشاطات الطلابية ، والعمل على تربية شخصية الطالب العلمية ، وتوجيهه نحو الاختيار
-                        الأمثل للفعالية التي يمارسها ، بما يتفق مع أهداف خدمة المجتمع
-                    </p>
-                </div>
+        <div class="content cont-3">
+            <div class="img_col_2"></div>
+        </div>
+        <div class="content cont-4">
+            <div class="code_grid">
+                <div class="icon-more">الرؤية</div>
+                <div class="main">النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
+                <div class="details">تشجيع مختلف النشاطات الطلابية ، والعمل على تربية شخصية الطالب العلمية ، وتوجيهه نحو الاختيار الأمثل للفعالية التي يمارسها ، بما يتفق مع أهداف خدمة المجتمع</div>
             </div>
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="icon-more" id="form-submit">
-                        <h3>الرسالة</h3>
-                    </div>
-                    <p style="color: black;">تسعى كلية الصيدلة إلى تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات
-                        الدوائية في الجمهورية العربية السورية ، وكليات الصيدلة العربية والأجنبية ، بهدف تطوير البحث
-                        العلمي والدراسات العليا ، وتعريب التعليم الصيدلي في الوطن العربي، وتوحيد مناهج كليات الصيدلة
-                        العربية</p>
+        </div>
+        <div class="content cont-5">
+            <div class="code_grid">
+                <div class="icon-more">الرسالة</div>
+                <div class="main" style="padding-block-start: 70px;">تسعى كلية الصيدلة إلى تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية ، وكليات الصيدلة العربية والأجنبية ، بهدف تطوير البحث العلمي والدراسات العليا ، وتعريب التعليم الصيدلي في الوطن العربي، وتوحيد مناهج كليات الصيدلة العربية</div>
+            </div>
+        </div>
+        <div class="content cont-6">
+            <div class="img_col_3"></div>
+        </div>
+        <div class="content cont-7">
+            <div class="code_grid">
+                <div class="icon-more">الأهداف</div>
+                <div class="main">إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات
+                    <br>
+                    تطوير وسائل البحث والتعليم وأصول التدريس، ووضع المؤلفات العلمية الجامعية والمرجعية وتوفيرها وإحداث المخابر اللازمة للبحث العلمي
+                    <br>
+                    النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية بما يضمن تحقيق شعار ربط الجامعة بالمجتمع
+                <br>تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية وكليات الصيدلة العربية والأجنبية بهدف تطوير البحث العلمي والدراسات العليا وتعريب التعليم الصيدلي في الوطن العربي وتوحيد مناهج كليات الصيدلة العربية
+                    <br>
+                    تشجيع مختلف النشاطات الطلابية والعمل على تربية شخصية الطالب العلمية وتوجيهه نحو الاختيار الأمثل للفعالية التي يمارسها بما يتفق مع هدف خدمة المجتمع
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="icon-more" id="form-submit">
-                        <h3>الأهداف</h3>
-                    </div>
-                    <p>إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات
-                        خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات
-                        <br>
-                        تطوير وسائل البحث والتعليم وأصول التدريس، ووضع المؤلفات العلمية الجامعية والمرجعية وتوفيرها
-                        وإحداث المخابر اللازمة للبحث العلمي
-                        <br>
-                        النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف
-                        المؤسسات الصحية والدوائية لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية
-                        العربية السورية بما يضمن تحقيق شعار ربط الجامعة بالمجتمع
-                        <br>
-                        تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية وكليات
-                        الصيدلة العربية والأجنبية بهدف تطوير البحث العلمي والدراسات العليا وتعريب التعليم الصيدلي في
-                        الوطن العربي وتوحيد مناهج كليات الصيدلة العربية
-                        <br>
-                        تشجيع مختلف النشاطات الطلابية والعمل على تربية شخصية الطالب العلمية وتوجيهه نحو الاختيار الأمثل
-                        للفعالية التي يمارسها بما يتفق مع هدف خدمة المجتمع
-                    </p>
+        <div class="content cont-8">
+            <div class="img_col_4"></div>
+        </div>
+        <div class="content cont-9">
+            <div class="code_grid">
+                <div class="icon-more">كلمة عميد الكلية</div>
+                <div class="main">
+                    أبنائي وبناتي الأعزاء طلبة وطالبات اليوم صيادلة المستقبل
+تحية تقدير مني ومن جميع أعضاء كليتكم على تفوقكم ونجاحكم الباهر في المرحلة الماضية واليوم وقد التحقتم بكلية الصيدلة – جامعة حلب في المناطق المحررة فقد بدأتم أولى خطواتكم لمستقبل عظيم إن شاء الله في مهنة الصيدلة . وأطمئنكم أننا قد بذلنا وما نزال كل جهد لنوفر لكم أحدث وأرقى نظم التعليم الطبي مواكبين قدر المستطاع التطور السريع بأساليب واستراتيجيات التعليم على مستوى العالم تحقيقا لرسالة الكلية ومساهمة في رفع كفاءة الخدمات الطبية في المجتمع المحيط
                 </div>
-            </div>
-            <div class="col_6 col_12">
-                <div class="img_col_3"></div>
+                <div class="details">وفـقـكم الله ورعـاكـم</div>
+                <div class="sign">عميد كلية الصيدلة
+                </div>
+                <div class="name-sign">أ. د. عثمان حجاوي</div>
             </div>
         </div>
-        <div class="row">
-            <div class="col_6 col_12">
-                <div class="img_col_4"></div>
-            </div>
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="icon-more" id="form-submit">
-                        <h3>كلمة عميد الكلية</h3>
-                    </div>
-                    <p> أبنائي وبناتي الأعزاء طلبة وطالبات اليوم صيادلة المستقبل
-                        تحية تقدير مني ومن جميع أعضاء كليتكم على تفوقكم ونجاحكم الباهر في المرحلة الماضية واليوم وقد
-                        التحقتم بكلية الصيدلة – جامعة حلب في المناطق المحررة فقد بدأتم أولى خطواتكم لمستقبل عظيم إن شاء
-                        الله في مهنة الصيدلة . وأطمئنكم أننا قد بذلنا وما نزال كل جهد لنوفر لكم أحدث وأرقى نظم التعليم
-                        الطبي مواكبين قدر المستطاع التطور السريع بأساليب واستراتيجيات التعليم على مستوى العالم تحقيقا
-                        لرسالة الكلية ومساهمة في رفع كفاءة الخدمات الطبية في المجتمع المحيط
-                        <br>
-                    </p>
-                    <p>وفـقـكم الله ورعـاكـم
-                    </p>
-                    <p>
-                        عميد كلية الصيدلة
-                        <br>
-                        أ. د. عثمان حجاوي
-                    </p>
+        <div class="content cont-10">
+            <div class="img_col_5"></div>
+        </div>
+        <div class="content cont-11">
+            <div class="code_grid">
+                <div class="icon-more">أقسام الكلية</div>
+                <div class="main">تتكون كلية الصيدلة في جامعة حلب في المناطق المحررة من الأقسام التالية</div>
+                <div class="details">
+                    قسم الصيدلانيات والتكنولوجيا الصيدلية
+                    <br>
+                    قسم علم تأثير الأدوية والسموم
+                    <br>
+                    قسم الكيمياء التحليلية والغذائية
+                    <br>
+                    قسم الكيمياء الحيوية والأحياء الدقيقة
+                    <br>
+                    قسم الكيمياء الصيدلية والمراقبة الدوائية
+                    <br>
+                    قسم العقاقير
+                    <br>
+                    قسم الدراسات العليا والذي يضم
+                    <br>
+                    قسم الكيمياء الحيوية والأحياء الدقيقة
+                    <br>
+                    قسم الصيدلانيات والتكنولوجيا الصيدلة
                 </div>
             </div>
+        </div>
 
-        </div>
-        <div class="row">
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="icon-more" id="form-submit">
-                        <h3>أقسام الكلية</h3>
-                    </div>
-                    <p> تتكون كلية الصيدلة في جامعة حلب في المناطق المحررة من الأقسام التالية
-                    </p>
-                    <p>
-                        قسم الصيدلانيات والتكنولوجيا الصيدلية
-                        <br>
-                        قسم علم تأثير الأدوية والسموم
-                        <br>
-                        قسم الكيمياء التحليلية والغذائية
-                        <br>
-                        قسم الكيمياء الحيوية والأحياء الدقيقة
-                        <br>
-                        قسم الكيمياء الصيدلية والمراقبة الدوائية
-                        <br>
-                        قسم العقاقير
-                        <br>
-                        قسم الدراسات العليا والذي يضم
-                    </p>
-                    <p>
-                        قسم الكيمياء الحيوية والأحياء الدقيقة
-                        <br>
-                        قسم الصيدلانيات والتكنولوجيا الصيدلة
-                    </p>
+        <div class="content cont-12">
+            <div class="code_grid">
+                <div class="icon-more">الخطة الدرسية</div>
+                <div class="main">تقوم الخطة الدرسية الموضوعة للطلاب للنهوض بهم من مرحلة الدراسية الأكاديمية إلى المرحلة العملية وفق برامج تخصصية ووفق آليات تعتمد على التجارب ضمن المخابر العملية والتي تضم</div>
+                <div class="details">
+                    مخبر الكيمياء العامة والعضوية
+                    <br>
+                    مخبر الكيمياء التحليلية والسموم
+                    <br>
+                    مخبر الصيدلانيات وتكنلوجيا الصيدلة
+                    <br>
+                    مخبرالأحياء الدقيقة والطفيليات
+                    <br>
+                    مخبر التشريح
+                    <br>
+                    مخبر الفيزيولوجيا
+                    <br>
+                    مخبر الكيمياء الحيوية والكيمياء السريرية
+                    <br>
+                    مخبر الدمويات
+                    <br>
+                    و التدريب ضمن صيدليات المشافي  والصيدليات الخاصة التي أبرمت اتفاقيات تعاون مشترك مع الجامعة
                 </div>
-            </div>
-            <div class="col_6 col_12">
-                <div class="img_col_5"></div>
+                <div class="btn-more"style="  font-size: 18px;">تحميل الخطة التدرسية</div>
             </div>
         </div>
-        <div class="row">
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="icon-more" id="form-submit">
-                        <h3>الخطة الدرسية</h3>
-                    </div>
-                    <p> تقوم الخطة الدرسية الموضوعة للطلاب للنهوض بهم من مرحلة الدراسية الأكاديمية إلى المرحلة العملية
-                        وفق برامج تخصصية ووفق آليات تعتمد على التجارب ضمن المخابر العملية والتي تضم
-                    </p>
-                    <p>
-                        مخبر الكيمياء العامة والعضوية
-                        <br>
-                        مخبر الكيمياء التحليلية والسموم
-                        <br>
-                        مخبر الصيدلانيات وتكنلوجيا الصيدلة
-                        <br>
-                        مخبرالأحياء الدقيقة والطفيليات
-                        <br>
-                        مخبر التشريح
-                        <br>
-                        مخبر الفيزيولوجيا
-                        <br>
-                        مخبر الكيمياء الحيوية والكيمياء السريرية
-                        <br>
-                        مخبر الدمويات
-                        <br>
-                    </p>
-                    <p>
-                        و التدريب ضمن صيدليات المشافي والصيدليات الخاصة التي أبرمت اتفاقيات تعاون مشترك مع الجامعة
-                    </p>
-                    <button type="submit" class="btn-down disabled" id="form-submit"> تحميل الخطة التدرسية</button>
-                </div>
-            </div>
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="icon-more" id="form-submit">
-                        <h3>إنجازات الكلية</h3>
-                    </div>
-                    <p> تقوم رؤية كلية بناء الشراكات المستدامة ودعمها مع المشافي التعليمية والنظام الصحي ومختلف القطاعات
-                        الصحية المحلية والدولية بهدف تحسين الحالة الصحية للمجتمع السوري خاصة والإقليمي والدولي عامة
-                    </p>
-                    <p>
-                        تعمل عمادة كلية الصيدلة على تعزيز البحث العلمي وتأمين وسائله بحسب الإمكانات المتاحة من خلال
-                        التأكيد الدائم على أهمية البحث العلمي، وتقوم دائما على حثّ الشباب على تقديم أبحاث مستمرة إيمانًا
-                        منها بأهمية البحث العلمي في رفع كل من سويّة الباحث والكلية على حد سواء
-                    </p>
-                    <p>
-                        التقييم الذاتي المستمر للأداء واحترام المبادئ العلمية والأكاديمية والأخلاقية والقانونية في
-                        التعليم والبحث العلمي والرعاية الصحية </p>
+        <div class="content cont-13">
+            <div class="code_grid">
+                <div class="icon-more">إنجازات الكلية</div>
+                <div class="main">*تقوم رؤية كلية بناء الشراكات المستدامة ودعمها مع المشافي التعليمية والنظام الصحي ومختلف القطاعات الصحية المحلية والدولية بهدف تحسين الحالة الصحية للمجتمع السوري خاصة والإقليمي والدولي عامة
+                    <br>*
+                    تعمل عمادة كلية الصيدلة على تعزيز البحث العلمي وتأمين وسائله بحسب الإمكانات المتاحة من خلال التأكيد الدائم على أهمية البحث العلمي، وتقوم دائما على حثّ الشباب على تقديم أبحاث مستمرة إيمانًا منها بأهمية البحث العلمي في رفع كل من سويّة الباحث والكلية على حد سواء
+                <br>
+                *التقييم الذاتي المستمر للأداء واحترام المبادئ العلمية والأكاديمية والأخلاقية والقانونية في التعليم والبحث العلمي والرعاية الصحية.
                 </div>
             </div>
         </div>
+        <div class="content cont-14">
+            <div class="code_grid">
+                <div class="icon-more">آخر الآخبار </div>
+            </div>
+        </div>
+<!--         
+        <div class="content cont-4">
+            <div class="code_grid">
+                <div class="icon-more"></div>
+                <div class="main"></div>
+                <div class="details"></div>
+                <div class="btn-more"></div>
+            </div>
+        </div>
+ -->
+    </div>
+
+<!--   
         <div class="row" id="New_fau">
             <div class="col_6 col_12">
                 <div class="code_grid">
@@ -284,8 +238,8 @@
                 <textarea class="contact-subject form-control" id="message" rows="6" placeholder="رسالتك" required=""></textarea>
                 <button type="submit" class="btn-contact btn-fill btn-block disabled" id="form-submit">ارسل رسالة</button>
             </div>
-        </div>
-    </div>
+        </div> -->
+
 </body>
 
 </html>
