--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
         <div class="content cont-14">
             <div class="code_grid">
                 <div class="icon-more">آخر الآخبار </div>
+                <div class="img_col_6"></div>
+                <div class="img_col_7"></div>
+                <div class="img_col_8"></div> 
+                <h1 class="h-1">512</h1>
+                <h1 class="h-2">12</h1>
+                <h1 class="h-3">0</h1>
             </div>
         </div>
 <!--         
@@ -176,21 +182,6 @@
     </div>
 
 <!--   
-        <div class="row" id="New_fau">
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="icon-more" id="form-submit">
-                        <h3>آخر الأخبار </h3>
-                    </div>
-                    <div class="img_col_6"></div>
-                    <div class="img_col_7"></div>
-                    <div class="img_col_8"></div> 
-                    <h1>512</h1>
-                    <h1>12</h1>
-                    <h1>0</h1>
-                </div>
-            </div>
-        </div>
         <div class="row">
             <div class="col_6 col_12">
                 <div class="code_grid">
