--- a/index.html
+++ b/index.html
@@ -169,6 +169,53 @@
                 <h1 class="h-3">0</h1>
             </div>
         </div>
+        <div class="content cont-15">
+            <div class="code_grid">
+                <div class="main"></div>
+                <div class="details"></div>
+            </div>
+        </div>
+        <div class="content cont-16">
+            <div class="icon-more"> اتصل بنا </div>
+            <div class="row"id="contact">
+                <div class="column col_12">
+                    <div class="sticker">
+                        <div class="contact-icon">
+                            <i class="fa fa-2x fa-map-marker"></i>
+                            <h6>عنوان الكلية</h6>
+                        </div>
+                        <div class="contact-info">
+                            <p>مارع <br> سوريا,ريف حلب الشمالي</p>
+                        </div>
+                    </div>
+                    <div class="sticker">
+                        <div class="contact-icon">
+                            <i class="fa fa-2x fa-envelope-open"></i>
+                            <h6>ايميل الكلية</h6>
+                        </div>
+                        <div class="contact-info">
+                            <p>pharmacyfree2018@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="sticker">
+                        <div class="contact-icon">
+                            <i class="fa fa-2x fa-envelope-open"></i>
+                            <h6>هاتف</h6>
+                        </div>
+                        <div class="contact-info">
+                            <p>00905528668930</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column col_12">
+                    <input name="name" class="contact-name form-control" id="name" type="text" placeholder="الاسم الأول" required="">
+                    <input name="name" class="contact-name form-control" id="L_name" type="text" placeholder=" الاسم الأخير" required="">
+                    <input name="name" class="contact-email form-control" id="email" type="email" placeholder="ايميلك" required="">
+                    <textarea class="contact-subject form-control" id="message" rows="6" placeholder="رسالتك" required=""></textarea>
+                    <button type="submit" class="btn-contact" id="form-submit">ارسل رسالة</button>
+                </div>
+            </div>
+        </div>
 <!--         
         <div class="content cont-4">
             <div class="code_grid">
