--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <li><a href="#contact"><span>اتصل بنا</span><span><i class="fa fa-2x fa-envelope"></i></span></a></li>
     </ul>
     <div class="container">
-        <div class="content cont-1" id="img_col_1"></div>
-        <div class="content cont-2" id="Info_home">
+        <div class="content cont-1" id="Info_home"></div>
+        <div class="content cont-2" >
             <div class="code_grid">
                 <div class="main">تسعى كلية الصيدلة إلى إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات</div>
                 <div class="details">كما تسعى النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
@@ -79,7 +79,7 @@
         <div class="content cont-8">
             <div class="img_col_4"></div>
         </div>
-        <div class="content cont-9">
+        <div class="content cont-9" id="Senior_fau">
             <div class="code_grid">
                 <div class="icon-more">كلمة عميد الكلية</div>
                 <div class="main">
@@ -95,7 +95,7 @@
         <div class="content cont-10">
             <div class="img_col_5"></div>
         </div>
-        <div class="content cont-11">
+        <div class="content cont-11" id="Slice_fau">
             <div class="code_grid">
                 <div class="icon-more">أقسام الكلية</div>
                 <div class="main">تتكون كلية الصيدلة في جامعة حلب في المناطق المحررة من الأقسام التالية</div>
@@ -121,7 +121,7 @@
             </div>
         </div>
 
-        <div class="content cont-12">
+        <div class="content cont-12" id="Plan_fau">
             <div class="code_grid">
                 <div class="icon-more">الخطة الدرسية</div>
                 <div class="main">تقوم الخطة الدرسية الموضوعة للطلاب للنهوض بهم من مرحلة الدراسية الأكاديمية إلى المرحلة العملية وفق برامج تخصصية ووفق آليات تعتمد على التجارب ضمن المخابر العملية والتي تضم</div>
@@ -158,7 +158,7 @@
                 </div>
             </div>
         </div>
-        <div class="content cont-14">
+        <div class="content cont-14" id="New_fau">
             <div class="code_grid">
                 <div class="icon-more">آخر الآخبار </div>
                 <div class="img_col_6"></div>
@@ -175,7 +175,7 @@
                 <div class="details"></div>
             </div>
         </div>
-        <div class="content cont-16">
+        <div class="content cont-16" id="contact">
             <div class="icon-more"> اتصل بنا </div>
             <div class="row"id="contact">
                 <div class="column col_12">
