--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <li><a href="#New_fau"><span>آخر الأخبار</span><span><i class="fa fa-2x fa-file-movie-o"></i></span></a></li>
         <li><a href="#contact"><span>اتصل بنا</span><span><i class="fa fa-2x fa-envelope"></i></span></a></li>
     </ul>
-    <div class="container">
-        <div class="content cont-1" id="Info_home"></div>
-        <div class="content cont-2" >
+    <div class="container"id="Info_home">
+        <div class="center_1 cont-1" ></div>
+        <div class="content cont-2">
             <div class="code_grid">
                 <div class="main">تسعى كلية الصيدلة إلى إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات</div>
                 <div class="details">كما تسعى النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
-                <div class="btn-more">اقرأ المزيد</div>
+                <div class="btn-more"><a href="#More">اقرأ المزيد</a></div>
             </div>
         </div>
         <div class="content cont-3">
             <div class="img_col_2"></div>
         </div>
-        <div class="content cont-4">
+        <div class="content cont-4" id="More">
             <div class="code_grid">
                 <div class="icon-more">الرؤية</div>
                 <div class="main">النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية ، لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية ، بما يضمن تحقيق شعار ربط الجامعة بالمجتمع</div>
@@ -56,7 +56,7 @@
         <div class="content cont-5">
             <div class="code_grid">
                 <div class="icon-more">الرسالة</div>
-                <div class="main" style="padding-block-start: 70px;">تسعى كلية الصيدلة إلى تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية ، وكليات الصيدلة العربية والأجنبية ، بهدف تطوير البحث العلمي والدراسات العليا ، وتعريب التعليم الصيدلي في الوطن العربي، وتوحيد مناهج كليات الصيدلة العربية</div>
+                <div class="main"">تسعى كلية الصيدلة إلى تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية ، وكليات الصيدلة العربية والأجنبية ، بهدف تطوير البحث العلمي والدراسات العليا ، وتعريب التعليم الصيدلي في الوطن العربي، وتوحيد مناهج كليات الصيدلة العربية</div>
             </div>
         </div>
         <div class="content cont-6">
@@ -65,13 +65,13 @@
         <div class="content cont-7">
             <div class="code_grid">
                 <div class="icon-more">الأهداف</div>
-                <div class="main">إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات
-                    <br>
+                <div class="main">1- إعداد الصيادلة وتأهيلهم في الاختصاصات والمهن الصيدلية كافة ، وتوفير الأطر اللازمة لتغطية احتياجات خطط التنمية في الجمهورية العربية السورية ، لخدمة المجتمع من خلال صيدلة الإنتاج وصيدلة الخدمات
+                    <br>2- 
                     تطوير وسائل البحث والتعليم وأصول التدريس، ووضع المؤلفات العلمية الجامعية والمرجعية وتوفيرها وإحداث المخابر اللازمة للبحث العلمي
-                    <br>
+                    <br>3- 
                     النهوض بالدراسات العليا والبحوث العلمية التي تسهم في تطور العلوم الصيدلية، والتعاون مع مختلف المؤسسات الصحية والدوائية لإيجاد الحلول لمختلف القضايا التي تواجه التطور الصيدلي في الجمهورية العربية السورية بما يضمن تحقيق شعار ربط الجامعة بالمجتمع
-                <br>تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية وكليات الصيدلة العربية والأجنبية بهدف تطوير البحث العلمي والدراسات العليا وتعريب التعليم الصيدلي في الوطن العربي وتوحيد مناهج كليات الصيدلة العربية
-                    <br>
+                <br>4- تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية وكليات الصيدلة العربية والأجنبية بهدف تطوير البحث العلمي والدراسات العليا وتعريب التعليم الصيدلي في الوطن العربي وتوحيد مناهج كليات الصيدلة العربية
+                    <br>5- 
                     تشجيع مختلف النشاطات الطلابية والعمل على تربية شخصية الطالب العلمية وتوجيهه نحو الاختيار الأمثل للفعالية التي يمارسها بما يتفق مع هدف خدمة المجتمع
                 </div>
             </div>
@@ -92,12 +92,12 @@
                 <div class="name-sign">أ. د. عثمان حجاوي</div>
             </div>
         </div>
-        <div class="content cont-10">
+        <div class="content cont-10"id="Slice_fau">
             <div class="img_col_5"></div>
         </div>
-        <div class="content cont-11" id="Slice_fau">
+        <div class="content cont-11"id="Slice_fau">
             <div class="code_grid">
-                <div class="icon-more">أقسام الكلية</div>
+                <div class="icon-more" >أقسام الكلية</div>
                 <div class="main">تتكون كلية الصيدلة في جامعة حلب في المناطق المحررة من الأقسام التالية</div>
                 <div class="details">
                     قسم الصيدلانيات والتكنولوجيا الصيدلية
@@ -150,11 +150,11 @@
         <div class="content cont-13">
             <div class="code_grid">
                 <div class="icon-more">إنجازات الكلية</div>
-                <div class="main">*تقوم رؤية كلية بناء الشراكات المستدامة ودعمها مع المشافي التعليمية والنظام الصحي ومختلف القطاعات الصحية المحلية والدولية بهدف تحسين الحالة الصحية للمجتمع السوري خاصة والإقليمي والدولي عامة
-                    <br>*
+                <div class="main">1- تقوم رؤية كلية بناء الشراكات المستدامة ودعمها مع المشافي التعليمية والنظام الصحي ومختلف القطاعات الصحية المحلية والدولية بهدف تحسين الحالة الصحية للمجتمع السوري خاصة والإقليمي والدولي عامة
+                    <br>2- 
                     تعمل عمادة كلية الصيدلة على تعزيز البحث العلمي وتأمين وسائله بحسب الإمكانات المتاحة من خلال التأكيد الدائم على أهمية البحث العلمي، وتقوم دائما على حثّ الشباب على تقديم أبحاث مستمرة إيمانًا منها بأهمية البحث العلمي في رفع كل من سويّة الباحث والكلية على حد سواء
                 <br>
-                *التقييم الذاتي المستمر للأداء واحترام المبادئ العلمية والأكاديمية والأخلاقية والقانونية في التعليم والبحث العلمي والرعاية الصحية.
+                3- التقييم الذاتي المستمر للأداء واحترام المبادئ العلمية والأكاديمية والأخلاقية والقانونية في التعليم والبحث العلمي والرعاية الصحية.
                 </div>
             </div>
         </div>
@@ -171,6 +171,7 @@
         </div>
         <div class="content cont-15">
             <div class="code_grid">
+                <div class="icon-more"> أخبارنا </div>
                 <div class="main"></div>
                 <div class="details"></div>
             </div>
@@ -227,57 +228,6 @@
         </div>
  -->
     </div>
-
-<!--   
-        <div class="row">
-            <div class="col_6 col_12">
-                <div class="code_grid">
-                    <div class="img_col_9"></div>
-                    <div class="img_col_10"></div>
-                    <div class="img_col_11"></div> 
-                </div>
-            </div>
-        </div>
-        <div class="row"id="contact">
-            <div class="info_row">اتصل بنا</div>
-            <div class="column col_12">
-                <div class="sticker">
-                    <div class="contact-icon">
-                        <i class="fa fa-2x fa-map-marker"></i>
-                        <h6>عنوان الكلية</h6>
-                    </div>
-                    <div class="contact-info">
-                        <p>مارع <br> سوريا,ريف حلب الشمالي</p>
-                    </div>
-                </div>
-                <div class="sticker">
-                    <div class="contact-icon">
-                        <i class="fa fa-2x fa-envelope-open"></i>
-                        <h6>ايميل الكلية</h6>
-                    </div>
-                    <div class="contact-info">
-                        <p>pharmacyfree2018@gmail.com</p>
-                    </div>
-                </div>
-                <div class="sticker">
-                    <div class="contact-icon">
-                        <i class="fa fa-2x fa-envelope-open"></i>
-                        <h6>هاتف</h6>
-                    </div>
-                    <div class="contact-info">
-                        <p>00905528668930</p>
-                    </div>
-                </div>
-            </div>
-            <div class="column col_12">
-                <input name="name" class="contact-name form-control" id="name" type="text" placeholder="الاسم الأول" required="">
-                <input name="name" class="contact-name form-control" id="L_name" type="text" placeholder=" الاسم الأخير" required="">
-                <input name="name" class="contact-email form-control" id="email" type="email" placeholder="ايميلك" required="">
-                <textarea class="contact-subject form-control" id="message" rows="6" placeholder="رسالتك" required=""></textarea>
-                <button type="submit" class="btn-contact btn-fill btn-block disabled" id="form-submit">ارسل رسالة</button>
-            </div>
-        </div> -->
-
 </body>
 
 </html>
