--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a href="#New_fau"><span>آخر الأخبار</span><span><i class="fa fa-2x fa-file-movie-o"></i></span></a></li>
         <li><a href="#contact"><span>اتصل بنا</span><span><i class="fa fa-2x fa-envelope"></i></span></a></li>
     </ul>
-    <div class="container"id="Info_home">
+    <div class="container" id="Info_home">
         <div class="center_1 cont-1" ></div>
         <div class="content cont-2">
             <div class="code_grid">
@@ -56,7 +56,7 @@
         <div class="content cont-5">
             <div class="code_grid">
                 <div class="icon-more">الرسالة</div>
-                <div class="main"">تسعى كلية الصيدلة إلى تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية ، وكليات الصيدلة العربية والأجنبية ، بهدف تطوير البحث العلمي والدراسات العليا ، وتعريب التعليم الصيدلي في الوطن العربي، وتوحيد مناهج كليات الصيدلة العربية</div>
+                <div class="main">تسعى كلية الصيدلة إلى تحقيق التعاون العلمي بين الكلية ومختلف المؤسسات الدوائية في الجمهورية العربية السورية ، وكليات الصيدلة العربية والأجنبية ، بهدف تطوير البحث العلمي والدراسات العليا ، وتعريب التعليم الصيدلي في الوطن العربي، وتوحيد مناهج كليات الصيدلة العربية</div>
             </div>
         </div>
         <div class="content cont-6">
@@ -92,10 +92,10 @@
                 <div class="name-sign">أ. د. عثمان حجاوي</div>
             </div>
         </div>
-        <div class="content cont-10"id="Slice_fau">
+        <div class="content cont-10" id="Slice_fau">
             <div class="img_col_5"></div>
         </div>
-        <div class="content cont-11"id="Slice_fau">
+        <div class="content cont-11">
             <div class="code_grid">
                 <div class="icon-more" >أقسام الكلية</div>
                 <div class="main">تتكون كلية الصيدلة في جامعة حلب في المناطق المحررة من الأقسام التالية</div>
@@ -144,7 +144,7 @@
                     <br>
                     و التدريب ضمن صيدليات المشافي  والصيدليات الخاصة التي أبرمت اتفاقيات تعاون مشترك مع الجامعة
                 </div>
-                <div class="btn-more"style="  font-size: 18px;">تحميل الخطة التدرسية</div>
+                <div class="btn-more" style="  font-size: 18px;">تحميل الخطة التدرسية</div>
             </div>
         </div>
         <div class="content cont-13">
@@ -178,7 +178,7 @@
         </div>
         <div class="content cont-16" id="contact">
             <div class="icon-more"> اتصل بنا </div>
-            <div class="row"id="contact">
+            <div class="row">
                 <div class="column col_12">
                     <div class="sticker">
                         <div class="contact-icon">
@@ -217,16 +217,6 @@
                 </div>
             </div>
         </div>
-<!--         
-        <div class="content cont-4">
-            <div class="code_grid">
-                <div class="icon-more"></div>
-                <div class="main"></div>
-                <div class="details"></div>
-                <div class="btn-more"></div>
-            </div>
-        </div>
- -->
     </div>
 </body>
 
