--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/vendors/container.css">
     <link rel="stylesheet" href="css/vendors/nav.css">
     <link rel="stylesheet" href="css/vendors/grid_css.css">
+    <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/vendors/fonts/font-awesome.min.css">
     <title>F.Pharmecy</title>
 </head>
